el.yaml
apiVersion: triggers.tekton.dev/v1beta1
kind: TriggerTemplate
metadata:
  name: trigger-template-nationalparks-jsytvd
  namespace: workshop
spec:
  params:
  - name: git-revision
  - name: git-commit-message
  - name: git-repo-url
  - name: git-repo-name
  - name: content-type
  - name: pusher-name
  resourcetemplates:
  - apiVersion: tekton.dev/v1beta1
    kind: PipelineRun
    metadata:
      annotations:
        pipeline.openshift.io/started-by: kevcolli@redhat.com
      generateName: nationalparks-
      labels:
        app.kubernetes.io/instance: nationalparks
        app.kubernetes.io/name: nationalparks
        pipeline.openshift.io/strategy: docker
        pipeline.openshift.io/type: kubernetes
        tekton.dev/pipeline: nationalparks
      namespace: workshop
    spec:
      params:
      - name: APP_NAME
        value: nationalparks
      - name: GIT_REPO
        value: https://github.com/kmcolli/nationalparks
      - name: GIT_REVISION
        value: master
      - name: IMAGE_NAME
        value: image-registry.openshift-image-registry.svc:5000/workshop/nationalparks
      - name: PATH_CONTEXT
        value: .
      pipelineRef:
        name: nationalparks
      resources: []
      status: null
      workspaces:
      - name: workspace
        volumeClaimTemplate:
          metadata:
            labels:
              tekton.dev/pipeline: nationalparks
          spec:
            accessModes:
            - ReadWriteOnce
            resources:
              requests:
                storage: 1Gi
---
apiVersion: triggers.tekton.dev/v1beta1
kind: TriggerBinding
metadata:
  name: nationalparks
spec:
  params:
  - name: git-repo-url
    value: $(body.repository.url)
  - name: git-repo-name
    value: $(body.repository.name)
  - name: git-revision
    value: $(body.head_commit.id)
---
apiVersion: triggers.tekton.dev/v1beta1
kind: EventListener
metadata:
  name: nationalparks
  namespace: workshop
spec:
  namespaceSelector: {}
  resources: {}
  serviceAccountName: pipeline
  triggers:
  - bindings:
    - kind: TriggerBinding
      ref: nationalparks
    template:
      ref: nationalparks
---
apiVersion: triggers.tekton.dev/v1beta1
kind: Trigger
metadata:
  name: ratingsapp-trigger
spec:
  serviceAccountName: pipeline
  interceptors:
    - ref:
        name: "github"
      params:
        name: "eventTypes"
        value: ["push"]
  bindings:
    - ref: nationalparks
  template:
    ref: trigger-template-nationalparks-jsytvd
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: nationalparks
  name: el-nationalparks
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-nationalparks
    weight: 100
